...
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:hint="Password"
        style="@style/Base.Widget.MaterialComponents.TextInputLayout"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wrap_login">

        <EditText
            android:id="@+id/et_password"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wrap_password" />

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_gray"
        android:text="Privacy policy"
        android:bufferType="spannable"
        app:layout_constraintStart_toStartOf="parent"
...
