...
            app:layout_constraintDimensionRatio="w,9:16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_author_avatar"
            tools:src="@drawable/ic_launcher_background" />
        <ru.skillbranch.skillarticles.ui.custom.markdown.MarkdownContentView
            android:id="@+id/tv_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:focusable="true"
            android:clipToPadding="false"
            android:focusableInTouchMode="true"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_content"
            android:background="?attr/colorSurface">

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSend"
                android:inputType="text"
                tools:text="comment text"/>
        </com.google.android.material.textfield.TextInputLayout>
...
